package cn.shui.order.base;

/**
 * @author shui.
 * @date 2021/11/13.
 * @time 16:04.
 */
public class Node1 {
    public int val;
    public Node1 next;
    public Node1 random;

    public Node1(int val) {
        this.val = val;
        next = null;
        random = null;
    }
}
