package cn.shui.order.base;

public class TreeNode {
    public int val;
    public TreeNode left;
    public TreeNode right;

    public TreeNode() {}

    public TreeNode(int val) {
        this.val = val;
    }

    public TreeNode(int val, TreeNode left, TreeNode rigjt) {
        this.val = val;
        this.left = left;
        this.right = rigjt;
    }
}
